app/assets/stylesheets/bookmarks/bookmarks_application.css.scss
.bookmark_view{
  position:absolute;
  color:white;
  height:95%;
  z-index:6;
}
.bookmark_menu{
  position:fixed;
  // width:240px;
  background-color: rgba(0,0,0,.8);
  height:100%;
  padding:10px;
  float:left;
  width:20%;
}
.bottom_border_padding{
  padding-bottom:10px;
  border-bottom:1px solid #707070;
}
.bookmark_object_title{
  font-size: 22px;
  font-weight: lighter;
  padding-top:.5em;
  padding-bottom: .7em;
  line-height: 26px;
}
ul.bookmark_menu_list {
  margin:0;
  padding:0;
  padding-top:.5em;

}
.bookmark_menu_list li{
  padding:.4em 0;

}
.bookmark_menu_list li:before{
    background-color:transparent;
    background-repeat:no-repeat;
    padding-right: 20px;

    }
.bookmark_menu_list li a,.bookmark_menu_list li {
  list-style-type: none;
  text-align:left;
  font-size: 16px;
  color:white;
  //width:100%;
}
.bookmark_menu_list > li a{
  margin-left:20px;
}
#my_bookmarks_menu_item.bookmark_menu_selected, 
#discover_menu_item.bookmark_menu_selected, li.bookmark_menu_selected a, a li.bookmark_menu_selected{
  color:#40c3fd;
}
.bookmark_menu_list a:hover, .bookmark_menu_list li:hover{
  color:#40c3fd;
  background-color: #464646;
  text-decoration: none;
}
#my_bookmarks_menu_item:before {
    background-position: -6px -8px;
    content:"";
  
}
#my_bookmarks_menu_item:hover:before, #my_bookmarks_menu_item.bookmark_menu_selected:before{
  background-position: -6px -44px;
  content:"";
  padding-right: 20px;
}
#discover_menu_item:before{
  background-position: -44px -9px;
  padding-right:20px;
  content:"";

}
#discover_menu_item:hover:before, #discover_menu_item.bookmark_menu_selected:before
{
  background-position: -44px -45px;
  padding-right:20px;
  content:"";
}

/*Discover Sub Menu Item Style*/
#discover_submenu_list li.discover_submenu{
  padding-left:40px;
  font-size:14px;
  
}
#discover_submenu_list{
  border-bottom:1px solid #707070;
  padding-bottom:2em;
}
.custom_bookmark_confirm_add_wrap{
  display:none;
  padding-left:40px;
}
.custom_bookmark_confirm_add_wrap img{
  width:150px;
  height:150px;
  padding-bottom:5px;
}
#add_your_own_box p{
  margin:5px 0;
}
/*END Discover Sub Menu Item Style*/
.my_bookmarks_list_wrap, .discover_list_wrap{
  height:100%;
  background-color:white;
  float:left;
  padding:10px;
  color:#333333;
  position:fixed;
  top:45px;
  // left:250px;
  left:20%;
  width:80%;
}
.my_bookmarks_top, .discover_bookmarks_top{
  padding:20px 20px 0px;
  border-bottom:1px solid #ebebeb;
  font-size:18px;
  margin-bottom:35px;

}
.bookmarks_close_button{
  position:absolute;
  top:15px;
  right:25px;
}
/*My Bookmarks Grid Items*/
.my_bookmarks_bottom, .discover_bookmarks_bottom{
  height:80%;
  overflow:auto;
}
.my_bookmarks_bottom li, .discover_bookmarks_bottom li{
  display:table-cell;


}
.bookmark_grid_item{
  width:180px;
  height:200px;
  border:1px solid #ebebeb;
  display:inline-block;
  position:relative;
  margin:4px 8px;

}
.bookmark_grid_item_bottom{
  position:absolute;
  bottom:0;
  left:0;
  z-index:1; /*To let this thumbnail icon still pop once its been added*/
}
.bookmark_grid_item_bottom img{
  width:30px;
  position:absolute;
  bottom:0;
  left:0;
  border:none;/*2px solid #7d7d7d;*/
  border-radius:100%;
}
.my_bookmarks_bookmark_name_form, .discover_bookmark_name_form{
  left:33px;
  position:absolute;
  bottom:0;
  margin:0;
  color: gray;
  white-space: nowrap;
  padding-left: 5px;
  max-width: 145px;
  overflow: hidden;

}
.my_bookmarks_bookmark_name_form input, .discover_bookmark_name_form input{
  width:140px;
  margin:0;
  margin-left:10px;
  border:none;

}
div:hover.bookmark_corner_icon_wrap img.trash_icon, div:hover.bookmark_corner_icon_wrap img.add_bookmark_icon{
display:none;
}
div.bookmark_corner_icon_wrap img.trash_icon_hover, div.bookmark_corner_icon_wrap img.add_bookmark_icon_hover{
display:none;
}
div:hover.bookmark_corner_icon_wrap img.trash_icon_hover, div:hover.bookmark_corner_icon_wrap img.add_bookmark_icon_hover{
display:block;
}

div.just_added{
  position:absolute;
  top:0;
  width:180px;
  height:180px;
  font-color:white;
  background-color:rgba(0,0,0,.8);
  z-index:0; /*to let bookmark_grid_item_bottom pop when bookmark is added*/

   //background: -webkit-radial-gradient(top center, ellipse cover, rgba(0,0,0,.8) 0%,rgba(0,0,0,0.8) 100%), url('http://www.placekitten.com/180/180') repeat;
}
div.just_added p{
  position:relative;
  top:50%;
  text-align:center;
  color:white;
  font-size:18px;
}
div.just_added img{
  position:absolute;
  top:0;
  right:0;
}
.my_bookmarks_more_square{
    background-color: #707070;
  height: 180px;
  width: 180px;
  color: white;
  padding:0;
  margin: 0;
  text-align: center;
  font-size: 35px;
  position: relative;
}
.my_bookmarks_more_square p{
  top: 40%;
  width: 100%;
  position: absolute;
}
/*END My Bookmarks Grid Items*/
/*Bookmarks Preview Mode*/
.preview_mode_wrap{
  position:fixed;
  left:20%;
  width:80%;
  height:100%;
  background-color: #404040;
  z-index:2;
}
.preview_mode_wrap iframe{
  width:100%;
  height:100%;
}
.preview_mode_title{
  color:#ffffff;
  height:35px;
  padding:.5em 0 .7em 1em;
  font-size:18px;
}
.preview_mode_title p{
  margin:1em;
}
.preview_mode_title .close_button{
  position:absolute;
  right:25px;
  top:10px;
}
#bookmark_sidebar_preview_mode{
  
  padding:30px .5em;
  margin-top: 15px;
  border-top: 1px solid #707070;
  width:230px;
}
 
#bookmark_sidebar_preview_mode .bookmark_sidebar_preview_mode_description{
  /*To make preview mode button align correctly.*/
  padding-right:1.5em;
  margin-top:10px;
  max-height: 200px;
  overflow: auto;
}
.preview_mode_save_button,.save_site_button {
  background-color:#0099cb;
  display:inline-block;
  color:#ffffff;
  font-size:16px;
  font-weight:normal;
  font-style:normal;
  height:32px;
  line-height:32px;
  width:130px;
  text-decoration:none;
  text-align:center;
  border-radius:3px;
}
#add_your_own_box .save_site_button{
  width:150px;
}
.preview_mode_save_button {
  width:80%;
}
.preview_mode_saved, .custom_url_saved{
  background-color: #7d7d7d;
  font-size:18px;
  color:white;
  width:80%;
  line-height:32px;
  height:32px;
  text-align: center;
  border-radius:3px;
  display:inline-block;
  position:relative;

}
.preview_mode_saved img, .custom_url_saved img{
  position:absolute;
  left:10px;
  bottom:10px;

}
.custom_url_saved{
  display:none;
  margin: 0 3em;
  width:150px;
}
/*END Bookmarks Preview Mode*/
/*Bookmarks Media Queries*/

  /*Height MQ*/
// @media screen and (max-height:675px){
//   .custom_bookmark_confirm_add_wrap img{
//   width:130px;
//   height:130px;
//   }
//   .bookmark_menu_list li{
//     padding:2px 0;
//   }
//   #discover_submenu_list{
//     padding-bottom:1em;
//   }
// }
// @media screen and (max-height:625px){
//   .custom_bookmark_confirm_add_wrap img{
//   width:100px;
//   height:100px;
//   padding: 0 1em 4px;
//   }
// }
// @media screen and (max-height:580px){
//   .custom_bookmark_confirm_add_wrap img{
//     width:50px;
//     height:50px;
//   }
// }
// @media screen and (max-height:475px){
//   .discover_submenu_section{
//     height:300px;
//     overflow-y:scroll;
//   }
// }@media screen and (max-height:451px){
//   #discover_submenu_list{
//     display:none;
//   }
// }
//    /*Width MQ*/
// @media screen and (max-width:1280px){
//   .bookmark_grid_item{
//     width:160px;
//     height:180px;
//   }
//   .bookmark_grid_item .gridItemPicture{
//     width:160px;
//   }
// }

